# dci_sink

./: .gitignore  CMakeLists.txt  README.md
example/: .dci_sink_serv.c.swp  .remote_server.c.swp  CMakeLists.txt  dci_sink_serv.c  remote_client.c  remote_server.c
lib/: CMakeLists.txt  CMakeLists.txt_bkup  dci_sink_sock.c  dci_sink_sock.h
lib/include/: dci_sink_ring_buffer.h  dci_sink_sock.h
lib/src/: dci_sink_client.c  dci_sink_ring_buffer.c  dci_sink_sock.c  sock.c
